--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Django==5.1.3
 django-cors-headers==4.6.0
 django-environ==0.11.2
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 environs==11.1.0
 executing==2.1.0
 frozenlist==1.5.0
